--- a/.github/workflows/android-preview-build.yml
+++ b/.github/workflows/android-preview-build.yml
@@ -1,48 +1,59 @@
-#name: Android App APK Build
-#
-#on:
-#  pull_request:
-#    branches:
-#      - develop
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Setup repo
-#        uses: actions/checkout@v4
-#
-#      - name: Setup node
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: 18.x
-#          cache: 'yarn'
-#          cache-dependency-path: 'yarn.lock'
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#
-#      - name: Setup Android SDK
-#        uses: android-actions/setup-android@v3
-#
-#      - name: Setup Expo
-#        uses: expo/expo-github-action@v8
-#        with:
-#          expo-version: latest
-#          eas-version: latest
-#          token: ${{ secrets.EXPO_TOKEN }}
-#
-#      - name: Install dependencies
-#        run: yarn install
-#
-#      - name: Build Android app
-#        run: eas build --platform android --profile development --local --output ${{ github.workspace }}/app-development.apk
-#
-#      - name: Upload APK artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: app-development
-#          path: ${{ github.workspace }}/app-development.apk
+name: Android App APK Build
+
+on:
+  workflow_dispatch:
+    inputs:
+      profile:
+        description: 'Build profile to use'
+        required: true
+        default: 'development'
+      should_submit:
+        description: 'Whether to submit the build'
+        required: true
+        default: 'false'
+      os:
+        description: 'OS to run on'
+        required: true
+        default: 'ubuntu-latest'
+
+jobs:
+  build:
+    runs-on: ${{ github.event.inputs.os }}
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: 'yarn'
+          cache-dependency-path: 'yarn.lock'
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Setup Expo
+        uses: expo/expo-github-action@v8
+        with:
+          expo-version: latest
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Build Android app
+        run: eas build --platform android --profile ${{ github.event.inputs.profile }} --local --output ${{ github.workspace }}/app-${{ github.event.inputs.profile }}.apk
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-${{ github.event.inputs.profile }}
+          path: ${{ github.workspace }}/app-${{ github.event.inputs.profile }}.apk
