--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
   "name": "deelbaar",
   "version": "0.0.1",
-  "private": true,
-  "license": "MIT",
   "main": "expo-router/entry",
   "scripts": {
     "android": "expo run:android",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo run:ios",
     "start": "expo start --dev-client",
-    "eas": "eas build --platform android --local",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\""
+    "web": "expo start --web",
+    "emu": "expo start --dev-client",
+    "eas": "eas build --platform android --local"
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@babel/core": "^7.26.0",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "5.0.6",
-    "@journeyapps/react-native-quick-sqlite": "^2.2.0",
+    "@op-engineering/op-sqlite": "^10.1.0",
     "@powersync/attachments": "^2.1.2",
-    "@powersync/common": "^1.22.0",
-    "@powersync/react-native": "^1.16.1",
+    "@powersync/op-sqlite": "^0.1.1",
+    "@powersync/react-native": "1.15.1",
     "@react-native-async-storage/async-storage": "2.1.0",
-    "@react-native-picker/picker": "^2.9.0",
     "@supabase/supabase-js": "^2.38.4",
-    "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^52.0.11",
+    "expo": "^52.0.0",
     "expo-camera": "~16.0.5",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
@@ -34,45 +32,45 @@
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.1",
     "expo-navigation-bar": "~4.0.3",
-    "expo-router": "^3.1.0",
+    "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-updates": "~0.26.7",
     "expo-web-browser": "~14.0.1",
+    "lodash": "^4.17.21",
     "postgres": "^3.4.4",
     "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.3",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "2.21.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-maps": "1.20.0",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "^4.0.0",
-    "react-native-ui-datepicker": "^2.0.4",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "text-encoding": "^0.7.0",
     "uuid": "11.0.3",
     "web-streams-polyfill": "4.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-async-generator-functions": "^7.25.9",
-    "@eslint/js": "^9.15.0",
-    "@types/babel__core": "^7",
-    "@types/base-64": "^1",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-async-generator-functions": "^7.24.3",
+    "@types/lodash": "^4.17.7",
     "@types/react": "~18.3.12",
-    "eas-cli": "^14.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "depcheck": "^1.4.7",
     "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.12.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "@babel/core": "^7.20.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "eslint-config-universe": "14.0.0",
+    "prettier": "^3.2.5",
+    "typescript": "5.6.3"
+  }
 }
