--- a/.github/workflows/ios-preview-build.yml
+++ b/.github/workflows/ios-preview-build.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v4.0.2
         with:
           node-version: 18.x
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Setup Expo
         uses: expo/expo-github-action@v8
@@ -25,7 +25,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
 
       - name: Build iOS app for Simulator
         run: eas build --platform ios --profile preview --local --non-interactive --output ${{ github.workspace }}/app-preview.app
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-simulator
-          path: ${{ github.workspace }}/app-simulator.app
+          path: ${{ github.workspace }}/app-preview.app
