--- a/ios/Podfile
+++ b/ios/Podfile
@@ -46,6 +46,17 @@ target 'Deelbaar' do
   # Explicitly prevent expo-sqlite or sqlite3 dependencies from being added
   # pod 'expo-sqlite', :path => '../node_modules/expo-sqlite', :inhibit_warnings => true
 
+  # Pre-install hook to set build type for react-native-quick-sqlite
+  pre_install do |installer|
+    installer.pod_targets.each do |pod|
+      next unless pod.name.eql?('react-native-quick-sqlite')
+
+      def pod.build_type
+        Pod::BuildType.static_library
+      end
+    end
+  end
+
   post_install do |installer|
     react_native_post_install(
       installer,
@@ -56,11 +67,11 @@ target 'Deelbaar' do
 
     installer.target_installation_results.pod_target_installation_results
       .each do |pod_name, target_installation_result|
-      target_installation_result.resource_bundle_targets.each do |resource_bundle_target|
-        resource_bundle_target.build_configurations.each do |config|
-          config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+        target_installation_result.resource_bundle_targets.each do |resource_bundle_target|
+          resource_bundle_target.build_configurations.each do |config|
+            config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+          end
         end
       end
-    end
   end
 end
