--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "5.0.6",
+    "@journeyapps/react-native-quick-sqlite": "^2.2.0",
     "@powersync/attachments": "^2.1.2",
     "@powersync/common": "^1.22.0",
     "@powersync/react-native": "^1.16.1",
@@ -75,6 +76,5 @@
     "eslint-config-universe": "14.0.0",
     "prettier": "^3.2.5",
     "typescript": "5.6.3"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
