--- a/package.json
+++ b/package.json
@@ -14,67 +14,52 @@
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "5.0.6",
     "@journeyapps/react-native-quick-sqlite": "^2.2.0",
-    "@powersync/attachments": "^2.1.2",
-    "@powersync/common": "^1.22.0",
-    "@powersync/react-native": "^1.16.1",
-    "@react-native-async-storage/async-storage": "2.1.0",
-    "@supabase/supabase-js": "^2.38.4",
-    "base-64": "^1.0.0",
+    "@powersync/attachments": "2.0.12",
+    "@powersync/common": "1.13.1",
+    "@powersync/react": "1.3.7",
+    "@powersync/react-native": "1.16.1",
+    "@supabase/supabase-js": "~2.33.1",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^52.0.0",
-    "expo-camera": "~16.0.5",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.2",
-    "expo-image-picker": "~16.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-location": "~18.0.1",
-    "expo-navigation-bar": "~4.0.3",
-    "expo-router": "~4.0.6",
-    "expo-splash-screen": "~0.29.11",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
-    "expo-updates": "~0.26.7",
-    "expo-web-browser": "~14.0.1",
+    "expo": "51.0.37",
+    "expo-build-properties": "~0.12.1",
+    "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-file-system": "^17.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-router": "3.5.23",
+    "expo-secure-store": "~13.0.1",
+    "expo-splash-screen": "~0.27.6",
+    "expo-status-bar": "~1.12.1",
+    "js-logger": "^1.6.1",
     "lodash": "^4.17.21",
-    "postgres": "^3.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-elements": "^3.4.3",
-    "react-native-fetch-api": "^3.0.0",
-    "react-native-gesture-handler": "2.21.1",
-    "react-native-get-random-values": "~1.11.0",
+    "metro": "~0.80.8",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-maps": "1.20.0",
-    "react-native-polyfill-globals": "^3.1.0",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-table": "^0.0.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "text-encoding": "^0.7.0",
-    "uuid": "11.0.3",
-    "web-streams-polyfill": "4.0.0"
+    "uuid": "11.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-transform-async-generator-functions": "^7.24.3",
-    "@types/base-64": "^1",
-    "@types/lodash": "^4.17.7",
-    "@types/react": "~18.3.12",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "depcheck": "^1.4.7",
-    "eslint": "^9.15.0",
-    "eslint-config-universe": "14.0.0",
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-transform-async-generator-functions": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "~18.2.79",
+    "babel-preset-expo": "^11.0.5",
     "prettier": "^3.2.5",
-    "typescript": "5.6.3"
-  }
+    "typescript": "^5.3.3"
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
