--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-file-system": "^17.0.1",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~6.3.1",
     "expo-location": "~18.0.1",
     "expo-router": "3.5.23",
