--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
