--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-image-picker": "^16.0.3",
     "expo-linking": "~6.3.1",
     "expo-location": "~18.0.1",
+    "expo-navigation-bar": "^4.0.5",
     "expo-router": "3.5.23",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.6",
