--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "metro": "~0.80.8",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-maps": "1.20.0",
