--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "^5.0.6",
     "expo-file-system": "^17.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-linking": "~6.3.1",
