--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "^0.26.10",
     "js-logger": "^1.6.1",
     "lodash": "^4.17.21",
     "metro": "~0.80.8",
