--- a/package.json
+++ b/package.json
@@ -23,22 +23,21 @@
     "@powersync/react-native": "1.16.1",
     "@supabase/supabase-js": "~2.33.1",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "51.0.37",
-    "expo-build-properties": "~0.12.1",
+    "expo": "~51.0.39",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "^5.0.6",
+    "expo-dev-client": "~4.0.29",
     "expo-file-system": "^17.0.1",
-    "expo-image-picker": "^16.0.3",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-location": "~18.0.1",
-    "expo-navigation-bar": "^4.0.5",
-    "expo-router": "3.5.23",
+    "expo-location": "~17.0.1",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "^0.26.10",
+    "expo-updates": "~0.25.27",
     "js-logger": "^1.6.1",
     "lodash": "^4.17.21",
     "metro": "~0.80.8",
@@ -47,15 +46,15 @@
     "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.2",
-    "react-native-maps": "1.20.0",
+    "react-native-maps": "1.14.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
+    "react-native-vector-icons": "^10.2.0",
     "uuid": "11.0.3"
   },
   "devDependencies": {
@@ -66,6 +65,7 @@
     "@types/react": "~18.2.79",
     "babel-preset-expo": "^11.0.5",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
-  }
+    "typescript": "~5.3.3"
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
