--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gorhom/bottom-sheet": "5.0.6",
     "@journeyapps/react-native-quick-sqlite": "^2.2.0",
     "@powersync/attachments": "2.0.12",
-    "@powersync/common": "1.13.1",
+    "@powersync/common": "^1.22.0",
     "@powersync/react": "1.3.7",
     "@powersync/react-native": "1.16.1",
     "@supabase/supabase-js": "~2.33.1",
@@ -43,13 +43,13 @@
     "metro": "~0.80.8",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-elements": "^3.4.3",
+    "react-native-elements": "3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-maps": "1.14.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.16.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
@@ -58,9 +58,9 @@
     "uuid": "11.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-transform-async-generator-functions": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-env": "^7.26.0",
     "@types/lodash": "^4.14.202",
     "@types/react": "~18.2.79",
     "babel-preset-expo": "^11.0.5",
