--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "5.0.6",
-    "@journeyapps/react-native-quick-sqlite": "^2.0.0",
+    "@journeyapps/react-native-quick-sqlite": "2.1.2",
     "@powersync/attachments": "2.0.12",
-    "@powersync/common": "1.13.1",
-    "@powersync/react": "1.3.7",
-    "@powersync/react-native": "1.16.1",
+    "@powersync/common": "1.22.0",
+    "@powersync/react": "1.5.1",
+    "@powersync/react-native": "1.15.1",
     "@supabase/supabase-js": "~2.33.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~51.0.39",
