--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.3",
-    "@gorhom/bottom-sheet": "5.0.6",
+    "@gorhom/bottom-sheet": "4.6.4",
     "@journeyapps/react-native-quick-sqlite": "2.1.2",
     "@powersync/attachments": "^2.1.2",
     "@powersync/common": "1.21.0",
@@ -37,21 +37,19 @@
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.27",
-    "js-logger": "^1.6.1",
     "lodash": "^4.17.21",
     "metro": "~0.80.8",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
-    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-maps": "1.14.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.16.5",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
+    "react-native-screens": "3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.2.0",
     "uuid": "11.0.3"
