--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-native-async-storage/async-storage": "2.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^52.0.0",
+    "expo": "^52.0.18",
     "expo-camera": "~16.0.5",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
@@ -85,5 +85,6 @@
         "listUnknownPackages": false
       }
     }
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
