--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-reanimated-carousel": "4.0.0-canary.22",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "^4.0.0",
     "react-native-url-polyfill": "^2.0.0",
